Minor IDE-suggested refactoring